@@ -23,7 +23,7 @@ class BooleanCoder implements Decoder, Encoder {
 	@Override public <T> T decode(BitBuffer bitbuffer,
             Class<T> classOfT, Field field,
             Annotation[] extraAnnotations, AsnExtractor extractor) {
-    	Boolean result = new Boolean(bitbuffer.get());
+    	Boolean result = Boolean.valueOf(bitbuffer.get());    	
         UperEncoder.logger.debug(String.format("BOOL: decoded as %s",result));
         return (T) result;
     }
